# duckdb-extension-clickhouse-sql

./: .gitmodules  CMakeLists.txt  DEVELOPMENT.md  Makefile  README.md  aliases.sql  description.yml  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  extract_macros.yml
chsql/: CMakeLists.txt  extension_config.cmake
chsql/src/: chsql_extension.cpp  default_table_functions.cpp  duck_flock.cpp  parquet_ordered_scan.cpp  silly_btree_store.cpp
chsql/src/include/: chsql_extension.hpp
chsql/test/sql/: chsql.test
src/: chsql_extension.cpp  default_table_functions.cpp  dynamic_sql_clickhouse_extension.cpp  dynamic_sql_examples_extension.cpp
src/include/: chsql_extension.hpp  dynamic_sql_clickhouse_extension.hpp  dynamic_sql_examples_extension.hpp
test/sql/: chsql.test  dynamic_sql_clickhouse.test  dynamic_sql_examples.test
